# digits_recogntion

./: pyproject.toml
notebooks/: expiremnts.ipynb  inference.ipynb
src/digits_recogntion/server/: config.py  server.py
src/digits_recogntion/types/: server_types.py
tests/: unit_tests.py
